# fluent-dual-erc20

./: .gitignore  README.md  commands.txt  contract-composition.md
script/: DeployRustToken.s.sol
src/rust-token/: Cargo.toml
src/rust-token/src/: lib.rs
src/token-ecosystem/contracts/erc20-token/: Cargo.toml
src/token-ecosystem/contracts/erc20-token/src/: lib.rs
src/token-ecosystem/contracts/token-factory/: Cargo.toml
src/token-ecosystem/contracts/token-factory/src/: factory.rs  lib.rs  registry.rs
src/token-ecosystem/interfaces/: Cargo.toml
src/token-ecosystem/interfaces/src/: ierc20.rs  ifactory.rs  igovernance.rs  itoken_initializer.rs  lib.rs
src/token-ecosystem/shared-types/: Cargo.toml
src/token-ecosystem/shared-types/src/: governance_types.rs  lib.rs  token_metadata.rs
