[package]
name = "token-factory"
version = "0.1.0"
edition = "2021"

[dependencies]
fluentbase-sdk = { git = "https://github.com/fluentlabs-xyz/fluentbase", tag = "v0.4.0-dev", default-features=false }
token-interfaces = { path = "../../interfaces" }
shared-types = { path = "../../shared-types" }

[lib]
crate-type = ["cdylib"]

[features]
default = ["std"]
std = ["fluentbase-sdk/std"]
wasm = []
